# ==================
# Project definition
# ==================
# Derived from https://peps.python.org/pep-0621/
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[project]
name = "pueblo"
description = "Pueblo - a Python toolbox library."
readme = "README.md"
keywords = [
  "general purpose",
  "library",
  "mixed",
  "pueblo",
]
authors = [
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Telecommunications Industry",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 1 - Unstable",
  "Topic :: Communications",
  "Topic :: Education",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "attrs",
  "contextlib-chdir; python_version<'3.11'",
  "importlib-metadata; python_version<'3.8'",
  "platformdirs<5",
  "tomli<3",
]
optional-dependencies.all = [
  "pueblo[cli,dataframe,fileio,ngr,nlp,notebook,proc,sfa-full,testing]",
]
optional-dependencies.cli = [
  "click<9",
  "click-aliases<=1.0.5; python_version<'3.10'",
  "click-aliases>=1.0.6,<2; python_version>='3.10'",
  "colorlog<7",
  "python-dotenv<2",
]
optional-dependencies.dataframe = [
  "dask",
  "numpy",
  "pandas",
  "pyarrow",
]
optional-dependencies.develop = [
  "black[jupyter]<27",
  "poethepoet<0.43",
  "pyproject-fmt<3",
  "ruff<0.16",
  "ty<0.0.51; python_version>='3.8'",
  "validate-pyproject<1",
]
optional-dependencies.fileio = [
  "fsspec[abfs,dask,gcs,git,github,http,s3,smb]<2026.5",
  "pathlibfs<0.6",
  "python-magic<0.5",
  "s3fs>=2021",
  "yarl<1.25",
]
optional-dependencies.mcp = [
  "mcp>=1.0,<2",
  "pyyaml<7",
]
optional-dependencies.ngr = [
  "pip",
  "pueblo[cli]",
]
optional-dependencies.nlp = [
  "aiohttp",
  "langchain-community",
  "langchain-core",
  "langchain-text-splitters",
  "requests-cache",
  "spacy",
  "unstructured",
]
optional-dependencies.notebook = [
  "nbclient<0.12",
  "nbdime<5",
  "notebook<8",
  "testbook<0.5",
]
optional-dependencies.proc = [
  "psutil<8",
]
optional-dependencies.release = [
  "build<2",
  "twine<7",
]
optional-dependencies.sfa = [
  "pueblo[cli]",
]
optional-dependencies.sfa-full = [
  "fsspec[github,http,libarchive,s3]<2026.7",
  "instld<0.1",
  "pueblo[sfa]",
]
optional-dependencies.test = [
  "psycopg2-binary<3",
  "pueblo[testing]",
]
optional-dependencies.testing = [
  "coverage<7.15",
  "pytest<10",
  "pytest-cov<8",
  "pytest-env<2",
  "pytest-mock<4",
]
optional-dependencies.testing-pytest7 = [
  "pytest<9",
  "pytest-notebook>=0.10,<0.11",
]
urls.changelog = "https://github.com/pyveci/pueblo/blob/main/CHANGES.md"
urls.documentation = "https://github.com/pyveci/pueblo"
urls.homepage = "https://github.com/pyveci/pueblo"
urls.repository = "https://github.com/pyveci/pueblo"
scripts.ngr = "pueblo.ngr.cli:main"
scripts.pueblo = "pueblo.cli:cli"
scripts.sfa = "pueblo.sfa.cli:main"

[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
packages.find.include = [ "pueblo*" ]

[tool.black]
line-length = 120

# extend-exclude = ""
[tool.ruff]
line-length = 120
extend-exclude = [
  "example_*",
]
lint.select = [
  # Builtins
  "A",
  # Bugbear
  "B",
  # comprehensions
  "C4",
  # Pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  # isort
  "I",
  # pandas-vet
  "PD",
  # return
  "RET",
  # Bandit
  "S",
  # print
  "T20",
  "W",
  # flake8-2020
  "YTT",
]
lint.per-file-ignores."*.ipynb" = [
  "PD901", # Avoid using the generic variable name `df` for DataFrames
  "T201",  # `print` found
]
lint.per-file-ignores."__init__.py" = [ "F401" ]  # `xxx` imported but unused
lint.per-file-ignores."pueblo/nlp/resource.py" = [ "A005" ]  # Module shadows a Python standard-library module
lint.per-file-ignores."pueblo/util/logging.py" = [ "A005" ]  # Module shadows a Python standard-library module
lint.per-file-ignores."staging/html.py" = [ "A005" ]  # Module shadows a Python standard-library module
lint.per-file-ignores."tests/*" = [ "S101" ]  # Use of `assert` detected

[tool.ty]
src.exclude = [ "staging" ]
rules.unused-ignore-comment = "ignore"
analysis.allowed-unresolved-imports = [
  "mcp",
  "mcp.types",
  "mcp.client.stdio",
  "pydantic",
  "pydantic_core",
  "yaml",
]

[tool.pytest]
ini_options.minversion = "2.0"
ini_options.addopts = """
  -rsfEX -p pytester --strict-markers --verbosity=3
  --cov=pueblo --cov-report=term-missing --cov-report=xml
  --ignore=tests/ngr
  """
ini_options.log_level = "DEBUG"
ini_options.log_cli_level = "DEBUG"
ini_options.testpaths = [ "tests" ]
ini_options.xfail_strict = true
ini_options.markers = [
  "mcp",
  "ngr",
  "nlp",
  "pytest_notebook",
  "sfa",
]
ini_options.env = [
  "PYDEVD_DISABLE_FILE_VALIDATION=1",
]
# pytest-notebook settings
ini_options.nb_test_files = "true"
ini_options.nb_coverage = "false"
ini_options.nb_diff_ignore = [
  "/metadata/language_info",
  "/cells/*/execution_count",
  "/cells/*/outputs/*/execution_count",
]

[tool.coverage]
run.branch = false
run.omit = [
  "tests/*",
]
run.source = [ "pueblo" ]
report.fail_under = 0
report.omit = [
  "tests/*",
]
report.show_missing = true

[tool.poe]
# ===================
# Tasks configuration
# ===================
tasks.format = [
  { cmd = "black ." },
  # Configure Ruff not to auto-fix (remove!):
  # Ignore unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },
]
tasks.lint = [
  { cmd = "ruff check ." },
  { cmd = "black --check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "ty check" },
]
tasks.test = "pytest -m 'not (mcp or ngr or nlp or sfa)'"
tasks.test-full = "pytest"
tasks.build = { cmd = "python -m build" }
tasks.check = [ "lint", "test" ]
tasks.check-full = [ "lint", "test-full" ]
tasks.release = [
  { cmd = "python -m build" },
  { cmd = "twine upload --skip-existing dist/*.tar.gz dist/*.whl" },
]

[tool.versioningit]
vcs.method = "git"
vcs.default-tag = "0.0.0"
